# mailnir

./: .gitignore  CLAUDE.md  README.md  biome.json  distrobox.ini  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/design/: data-system.md  overview.md  smtp.md  template-system.md  ui.md  validation-preview.md
docs/phases/: phase-1-data-loading.md  phase-2-join-engine.md  phase-3-rendering.md  phase-4-validation.md  phase-5-smtp.md  phase-6-ui-shell.md  phase-7-template-editor.md  phase-8-preview.md  phase-9-polish.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  deny.toml  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/fixtures/data/: classes.json  comma.csv  instructors.json  instructors_clean.json  latin1.csv  pipe.csv  semicolon.csv  simple.json  simple.toml  simple.yaml  single_object.json  tab.csv  windows1252.csv
src-tauri/fixtures/templates/: anchors.mailnir.yml  composite_join.mailnir.yml  form_source.mailnir.yml  full.mailnir.yml  html_body.mailnir.yml  minimal.mailnir.yml  text_body.mailnir.yml
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/data/: csv.rs  format.rs  json.rs  loader.rs  mod.rs  toml.rs  yaml.rs
src-tauri/src/join/: mod.rs
src-tauri/src/render/: mod.rs
src-tauri/src/smtp/: mod.rs
src-tauri/src/template/: infer.rs  mod.rs  parse.rs  types.rs  validate.rs
src-tauri/src/validate/: mod.rs
src-tauri/tests/: form_integration.rs  phase1_integration.rs  phase4_integration.rs  phase5_integration.rs  phase8_integration.rs  phase9_integration.rs
src/components/DataPanel/: CsvConfigPanel.tsx  FormFieldsPanel.tsx  SourceConfigDialog.tsx  SourceSlotRow.tsx  index.tsx
src/components/Preview/: HtmlPreview.tsx  InstanceNavigator.tsx  MetadataPanel.tsx  TextPreview.tsx  ValidationErrors.tsx  index.tsx
src/components/SendDialog/: SendDialog.tsx
src/components/SmtpSettings/: SmtpProfileForm.tsx  SmtpSettingsDialog.tsx
src/components/StatusBar/: index.tsx
src/components/TemplateEditor/: BodyEditor.tsx  BodyFormatSelect.tsx  FieldEditor.tsx  handlebarsExtension.ts  index.tsx
src/components/ui/: resizable.tsx  tabs.tsx
src/lib/: ipc.ts
