[package]
name = "mailnir"
# Not used for display — the UI version comes from `git describe` (see build.rs).
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "mailnir_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "mailnir"
path = "src/main.rs"
required-features = ["tauri-backend"]

[features]
default = ["tauri-backend"]
tauri-backend = ["dep:tauri", "dep:tauri-plugin-dialog"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
csv = "1"
encoding_rs = "0.8"
thiserror = "2"
handlebars = "6"
comrak = "0.50"
css-inline = { version = "0.14", default-features = false }
mime_guess = "2"
keyring = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
tauri = { version = "2", features = ["image-png"], optional = true }
tauri-plugin-dialog = { version = "2", optional = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
